# eCR_predictor

./: .gitignore  CLAUDE.md  README.md  check_fusion_env.sh  cli.py  config.example.yaml  config.yaml  environment.yml  fuse.py  install_fusion_tools.sh  pyproject.toml  refine.py  server_run.sh  server_setup.sh
ecr_predictor/: af3.py  config.py  filter.py  fimo.py  foldx.py  output.py  prefetch.py  query.py  scan.py  score.py
ecr_predictor/fusion/: __init__.py  aggregation.py  assemble.py  backends.py  immunogenicity.py  junction.py  score.py  stability.py  structure.py
