[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecr_predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "scripts",
    "biopython",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecr_predictor*"]

[project.scripts]
ecr-predict = "cli:main"
